feat: Introduce new OS-like UI/UX, including core components, layouts, styling, and a plant disease model.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,13 @@
         "strict": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "noFallthroughCasesInSwitch": true
+    },
+    "include": [
+        "paths": {
+            "@/*": [
+                "./src/*"
+            ]
+        }
     },
     "include": [
         "src"
