--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,8 @@
         "strict": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-    },
-    "include": [
+        "noFallthroughCasesInSwitch": true,
+        "baseUrl": ".",
         "paths": {
             "@/*": [
                 "./src/*"
