refactor: Replace custom i18n with i18next library
Breaking Changes:
- Replaced custom LanguageContext with i18next
- useLanguage()  useTranslation() hook
- t() function now from react-i18next

New Setup:
- lib/i18n.ts - i18next configuration
- components/I18nProvider.tsx - Initialization wrapper
- Updated LanguageSelector to use i18next hooks

Benefits:
- Industry standard library
- Better performance
- More features (interpolation, plurals, etc.)
- Larger ecosystem and plugins
- Better TypeScript support

Install:
npm install i18next react-i18next

Usage:
const { t, i18n } = useTranslation();
<span>{t('scanYourCrop')}</span>

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^12.7.0",
+    "i18next": "^25.7.3",
     "lucide-react": "^0.562.0",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-i18next": "^16.5.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
