--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -8,3 +8,6 @@ NEXT_PUBLIC_FIREBASE_PROJECT_ID=your_project_id
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your_project_id.firebasestorage.app
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id
 NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id
+
+# Resend API Key (for contact form emails)
+RESEND_API_KEY=your_resend_api_key
